--- a/README
+++ b/README
@@ -20,9 +20,9 @@ JSONRPCTCP is licensed under the Apache Licence, Version 2.0
 
 Requirements
 ============
-* Python 2.5+
-* SimpleJSON on Python < 2.6
+* Python 2.6+ or Python 3.0+
 * PyCrypto (optional) for encryption support
+* Six
 
 Installation
 ============
